dist_man1_MANS=

if BUILD_MONACOIND
  dist_man1_MANS+=monacoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=monacoin-qt.1
endif

if BUILD_MONACOIN_CLI
  dist_man1_MANS+=monacoin-cli.1
endif

if BUILD_MONACOIN_TX
  dist_man1_MANS+=monacoin-tx.1
endif

if BUILD_MONACOIN_UTIL
  dist_man1_MANS+=monacoin-util.1
endif

if ENABLE_WALLET
if BUILD_MONACOIN_WALLET
  dist_man1_MANS+=monacoin-wallet.1
endif
endif
